# page_analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml  hexlet-check.yml
page_analyzer/: app.py  database.py  parser.py
page_analyzer/templates/: base.html  index.html  show_url.html  urls.html
tests/: test_app.py
